@@ -1,2 +1,0 @@
-6.90;0.00;1500.00
-0.55%;1500.01;100000.00
